# stm32_pm2025

./: CMakeLists.txt  main.c  stm32.pzw  toolchain-arm.cmake  untitled.pzw
include/: spi1_exchange.h  ssd1306.h
src/: main.c  spi1_exchange.c  ssd1306.c
